--- a/docker/configs/php_bitrix.ini
+++ b/docker/configs/php_bitrix.ini
@@ -5,3 +5,14 @@ memory_limit = 256M
 upload_max_filesize = 1024M
 error_reporting = E_ALL ^ E_DEPRECATED
 display_errors = On
+
+;[Date]
+;date.timezone = "Europe/Minsk"
+;
+;[PHP]
+;max_input_vars = 10000
+;post_max_size = 1024M
+;memory_limit = 256M
+;upload_max_filesize = 1024M
+;error_reporting = E_ALL ^ E_DEPRECATED
+;display_errors = On
